# cvpp

./: .gitignore  CMakeLists.txt  README.md
algorithms/bayes_opt/: bayes_opt.cpp  bayes_opt.h
algorithms/clustering/: kmeans.cpp  kmeans.h  quick_means.h
algorithms/dim_reduction/: kernel_pca.cpp  kernel_pca.h  linear_pca.cpp  linear_pca.h
algorithms/doubly_stochastic/: dsgd_compare.cpp  dsgd_compare.h  dsgd_original.cpp  dsgd_original.h
algorithms/features/: classifier_object.h  classifier_object_src.h  feature_descriptor.h  feature_descriptor_src.h  feature_extractor.h  feature_extractor_src.h  feature_matcher.h  feature_matcher_src.h  feature_tracker.h  feature_tracker_src.h  tracker_object.h  tracker_object_src.h
algorithms/icp/: libicp.cpp  libicp.h
algorithms/kdtree/: kdtree.cpp  kdtree.h
algorithms/marching_cubes/: marching3D.cpp  marching3D.h  marching3Dcases.h
algorithms/optimiser/: optimiser_nlopt.cpp  optimiser_nlopt.h
algorithms/random_kitchen_sinks/: rks_feat_base.h
auxiliar/: definitions.h  macros.h  macros_base.h  timer.h
auxiliar/definitions/: definitions_boost.h  definitions_constants.h  definitions_cpplot.h  definitions_device.h  definitions_eigen.h  definitions_gp.h  definitions_loops.h  definitions_nlopt.h  definitions_opencv.h  definitions_shogun.h  definitions_standard.h  definitions_template.h
auxiliar/functions/: functions_alglin.h  functions_border.h  functions_color.h  functions_disp.h  functions_halt.h  functions_nums.h  functions_rand.h  functions_split.h  functions_string.h
cmake/: CVPP.cmake  CVPP_ALL.cmake  FindMKL.cmake  FindNLOPT.cmake  FindVLFEAT.cmake
containers/: array.h  array_src.h  base.h  device.h  device_src.h  image.h  image_src.h  matrix.h  matrix_src.h  pair.h  pair_src.h  sparse.h  sparse_src.h  trio.h  vector.h  vector_src.h
containers/array/: array_base.h  array_operator_unary.h  array_print.h  array_set.h
containers/device/: device_base.h  device_method_calc.h  device_method_cholesky.h  device_method_print.h  device_method_reduction.h  device_method_set.h  device_method_solve.h  device_operator_attrib.h  device_operator_binary.h  (+1 more)
demos/: clean_all  cmake_all  make_all
demos/bayes_opt/: CMakeLists.txt
demos/bayes_opt/src/: demo_bo2D.cpp  demo_bo3D.cpp
demos/bundle_adjustment/: CMakeLists.txt
demos/bundle_adjustment/data/: calib.txt  feats_nsy.txt  feats_raw.txt  poses_nsy.txt  projs_raw.txt
demos/bundle_adjustment/data/5imgs/: 0_co_2D_01_0_.txt  0_co_2D_01_1_.txt  0_co_3D.txt  1_co_2D_02_0_.txt  1_co_2D_02_2_.txt  1_co_3D.txt  2_co_2D_03_0_.txt  2_co_2D_03_3_.txt  2_co_3D.txt  3_co_2D_04_0_.txt  3_co_2D_04_4_.txt  3_co_3D.txt  4_co_2D_12_1_.txt  4_co_2D_12_2_.txt  4_co_3D.txt  5_co_2D_13_1_.txt  5_co_2D_13_3_.txt  5_co_3D.txt  6_co_2D_14_1_.txt  6_co_2D_14_4_.txt  6_co_3D.txt  7_co_2D_23_2_.txt  7_co_2D_23_3_.txt  7_co_3D.txt  8_co_2D_24_2_.txt  8_co_2D_24_4_.txt  8_co_3D.txt  9_co_2D_34_3_.txt  9_co_2D_34_4_.txt  9_co_3D.txt  calib.txt  cams_sba_0  cams_sba_1  cams_sba_2  cams_sba_3  cams_sba_4  extrinsic_sfm_0  extrinsic_sfm_1  extrinsic_sfm_2  extrinsic_sfm_3  (+3 more)
demos/bundle_adjustment/src/: proj_5imgs.cpp  proj_generate.cpp  proj_optimize.cpp  proj_real_bundle.cpp  proj_triangulation.cpp
demos/camera/: CMakeLists.txt
demos/camera/data/: virtual  webcam
demos/camera/src/: demo_depth.cpp  demo_epipolar.cpp  demo_essential.cpp  demo_poseest.cpp  demo_projection.cpp
demos/dim_reduction/: CMakeLists.txt
demos/dim_reduction/data/: circles_X  circles_Y  moonhalf_X  moonhalf_Y  swissroll_X  swissroll_Y
demos/dim_reduction/src/: demo_isomap.cpp  demo_kpca.cpp  demo_pca.cpp
demos/doubly_stochastic/: CMakeLists.txt
demos/doubly_stochastic/data/: rings_X  rings_Y
demos/doubly_stochastic/src/: demo_doubly_2D.cpp  demo_doubly_3D.cpp
demos/features/: CMakeLists.txt
demos/features/src/: demo_matcher.cpp  demo_object.cpp  demo_tracker.cpp  demo_transform.cpp  demo_warp.cpp
demos/gaussian_processes/: CMakeLists.txt
demos/gaussian_processes/data/: demo_Xev_1  demo_Xev_2  demo_Xtr_1  demo_Xtr_2  demo_Yev_1  demo_Yev_2  demo_Ytr_1  demo_Ytr_2  demo_Ztr_1  demo_Ztr_2  hetero_Xev_1  hetero_Xev_2  hetero_Xtr_1  hetero_Xtr_2  hetero_Ytr_1  hetero_Ytr_2
demos/gaussian_processes/src/: demo_bigdata.cpp  demo_full.cpp  demo_local_indep.cpp  demo_local_sum.cpp  demo_pseudo.cpp  demo_sparse.cpp  demo_varhetero.cpp  demo_varlearn.cpp
demos/hilbert_maps/: CMakeLists.txt
demos/hilbert_maps/data/: scan_Ytr  scan_input  virtual_pts_01  virtual_scan_01
demos/hilbert_maps/src/: demo_dsgd_rings.cpp  demo_dsgd_virtual.cpp  demo_lard_riegl1.cpp  demo_lard_riegl2.cpp  demo_lard_rings.cpp  demo_lard_scan.cpp  demo_lard_virtual.cpp  demo_orgn_scan.cpp
demos/interfaces/: CMakeLists.txt
demos/interfaces/src/: demo_process.cpp
demos/path_planning/: CMakeLists.txt
demos/path_planning/data/: traj.txt
demos/path_planning/src/: model.h  model2.h  proj_accel.cpp  proj_reward.cpp  proj_track.cpp  proj_track_create.cpp  track.h  track2.h
demos/path_planning/src/track/: track.cpp  track.h
demos/path_planning/src/vehicle/: vehicle.cpp  vehicle.h  vehicle_base.cpp  vehicle_cost.cpp  vehicle_draw.cpp
demos/random_kitchen_sinks/: CMakeLists.txt
demos/random_kitchen_sinks/src/: demo_compare.cpp
interfaces/: cpplot.cpp  cpplot.h  cpprint.cpp  cpprint.h  cppture.cpp  cppture.h
modules/: algl.h  algl_src.h  cvis.cpp  cvis.h
network/: network_downloader.h  network_emailer.h
objects/: object.cpp  object.h  object_board.h  object_board_src.h  object_camera.h  object_camera_src.h  object_drone.h  object_drone_src.h  object_keyframe.h  object_keyframe_src.h  object_virtual.h  object_virtual_src.h  object_wall.h  object_wall_src.h  object_world.h
properties/: pose.cpp  pose.h
ros/: ros_node.h  ros_node_src.h
structs/: struct_borders2.h  struct_borders3.h  struct_buffer.h  struct_data_type.h  struct_dims.h  struct_gp.h  struct_graph.h  struct_keyboard.h  struct_kmeans.h  struct_lsd.h  struct_screen.h  struct_texture.h  struct_window.h
tutorials/: CMakeLists.txt
tutorials/src/: test.cpp
(+257 files in other folders)
